deploy/k8s/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtp-ui
  namespace: ${NAMESPACE:-dtp}
spec:
  selector: { app: dtp-ui }
  ports: [ { port: 80, targetPort: 80 } ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtp-ui
  namespace: ${NAMESPACE:-dtp}
spec:
  replicas: 2
  selector: { matchLabels: { app: dtp-ui } }
  template:
    metadata: { labels: { app: dtp-ui } }
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values: ["dtp-core"]
      containers:
      - name: ui
        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPO}/dtp-ui:${IMAGE_TAG}
        ports: [ { containerPort: 80 } ]
